API & NOTIFICATION
