# app/Http/Resources/NotificationResource.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class NotificationResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'title' => $this->title,
+            'message' => $this->message,
+            'image' => $this->image,
+            'action_type' => $this->action_type,
+            'action_value' => $this->action_value,
+            'created_by' => $this->created_by,
+            'send_to' => $this->send_to,
+            'schedule_at' => $this->schedule_at ? $this->schedule_at->toDateTimeString() : null,
+            'status' => $this->status,
+            'created_at' => $this->created_at ? $this->created_at->toDateTimeString() : null,
+            'updated_at' => $this->updated_at ? $this->updated_at->toDateTimeString() : null,
+        ];
+    }
+}
